swaggerize
Former-commit-id: 87c1a5181601ab705e26ab9c06f227ba45d60a4a
